fix(admin): optimize dashboard and customer data loading with parallel DB queries and batch lookups